2009-08-04  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Expand section on newhistogram command.

2009-08-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c src/save.c src/graphics.c src/term_api.h docs/gnuplot.doc
	docs/plotstyles.gnu:  Add new linestyle property 'pointinterval'.
	This is a modified version of patchset #2653943 contributed by
	Hans (oe6jwf@users.sourceforge.net).

	* src/axis.c src/axis.h src/color.c src/graphics.c src/graph3d.c:
	Add an additional parameter to all tick_callback() routines. In the case
	of auto-generated ticks, we use this to pass in a list of user-specified
	labels in case one is supposed to replace the auto-generated label.
	The actual label replacement is only implemented for 2D plots.

2009-07-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Handle xticlabels() in the case of
	histograms with errorbars.  Bugfix

2009-07-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_color_smooth_box) src/gadgets.h src/gadgets.c
	src/graphics.c (boundary):  Add a field color_box.xoffset to allow the
	colorbox to be shifted left or right from the default placement.
	Use this internally to correct for the width taken by y2 tics and
	labels.
	Bugfix:  'set y2tics; plot foo using 1:2:3 axes x1y2 lc palette'
	
	* src/graphics.c (do_polygon):  Change the clipping rules for polygons
	to match those of rectangles.  A polygon is clipped only if all of its
	vertices are specified in plot coordinates (i.e. not screen or graph
	coordinates.

2009-07-24  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* qtterminal/qt_term.cpp: use locale config macros

2009-07-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (store2d_point):  If the plot uses palette colors taken
	from the Z coordinate, then also use Z to auto-scale cbrange.
	Bug #2133407

2009-07-16  Ethan A Merritt  <merritt@u.washington.edu>
